fix: otter notice upsell buttons on mobile

--- a/assets/css/src/welcome-notice.scss
+++ b/assets/css/src/welcome-notice.scss
@@ -43,6 +43,7 @@
 		margin-top: 40px;
 		gap: 20px;
 		align-items: center;
+		flex-wrap: wrap;
 
 
 		@media (--desktop) {
